@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.385 2005/09/21 03:15:04 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.386 2005/09/21 03:32:45 agaffney Exp $
 
 *GLI-0.2 (4 Aug 2005)
 
@@ -9,6 +9,8 @@
   src/GLIStorageDevice.py:
   prevent do_recommended() from being run twice
   rewrite do_recommended() to be more robust
+  src/GLIArchitectureTemplate.py:
+  rework _edit_config() to not write duplicate entries
 
   17 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIStorageDevice.py:
